package design.patten.adapter;

/**
 * desc : 被适配的类
 * Created by tiantian on 2018/10/2
 */
public class Adaptee {
    public void function1() {
        System.out.println("I'm function1() who can do something, tut not enough.");
    }
}
