package design.patten.adapter;

/**
 * desc : 目标接口
 * Created by tiantian on 2018/10/2
 */
public interface Target {
    void function1();
    void function2();
}
